--- a/discovery-dev.yml
+++ b/discovery-dev.yml
@@ -1,2 +1,12 @@
 server:
   port: 1001
+eureka:
+  instance:
+    hostname: localhost
+    leaseExpirationDurationInSeconds: 5
+    leaseRenewalIntervalInSeconds: 3
+  client:
+    registerWithEureka: false
+    fetchRegistry: false
+    serviceUrl:
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
