--- a/application-dev.yml
+++ b/application-dev.yml
@@ -1,16 +1,20 @@
+spring:
+  zipkin:
+    baseUrl: http://chan.minkim:9411
+  sleuth:
+    sampler:
+      percentage: 0.2
 eureka:
   client:
+    registerWithEureka: true
+    fetchRegistry: true
     serviceUrl:
       defaultZone: http://chan.minkim:1001/eureka/
   instance:
-    instanceId: ${spring.application.name}:${spring.profiles.active}:${spring.cloud.client.hostname}:${server.port}:${random.value}
     preferIpAddress: true
-    leaseRenewalIntervalInSeconds: 5
-    leaseExpirationDurationInSeconds: 90
-    metadataMap:
-      #아래는 spring boot admin을 위한 설정
-      management.context-path: ${server.contextPath}${management.context-path}
-      health.path: /health
+    instanceId: ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
+    leaseRenewalIntervalInSeconds: 3
+    leaseExpirationDurationInSeconds: 5
   security:
     user:
       password: none
