--- a/clientService-dev.yml
+++ b/clientService-dev.yml
@@ -1,5 +1,6 @@
 server:
   port: 0
+spring:
   h2:
     console:
       enabled: true
@@ -20,19 +21,3 @@ server:
         formatSql: true
         id:
           newGeneratorMappings: true
-  zipkin:
-    baseUrl: http://chan.minkim:9411
-  sleuth:
-    sampler:
-      percentage: 0.2
-eureka:
-  client:
-    registerWithEureka: true
-    fetchRegistry: true
-    serviceUrl:
-      defaultZone: http://chan.minkim:1001/eureka/
-  instance:
-    preferIpAddress: true
-    instanceId: ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
-    leaseRenewalIntervalInSeconds: 3
-    leaseExpirationDurationInSeconds: 5
